# kulasisi

./: CONTRIBUTING.md  INSTALL.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  schema.yaml  schema.yml
backend/backend/: settings.py  urls.py
backend/content/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/content/fixtures/: languages.json
backend/content/migrations/: 0001_initial.py  0002_initial.py  0002_textentry_author.py  0003_historicaldictentry_dictentry.py  0003_historicaltranslation_translation.py  0004_languageproficiency.py  0005_rename_language_languageproficiency_lang_and_more.py  0006_vote.py  0007_alter_languageproficiency_lang.py  0008_remove_vote_unique_textentry_vote_and_more.py  (+1 more)
backend/core/: models.py  pagination.py  serializers.py  urls.py  views.py
backend/data/: freqlist_eng.txt
backend/dictionary/: admin.py  models.py  serializers.py  urls.py  urls_definitions.py  utils.py  views.py
backend/games/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/languages/: admin.py  models.py  serializers.py  urls.py  views.py
backend/phrases/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  urls_translations.py  utils.py  views.py
backend/proofreader/: constants.py  proofreader.py  serializers.py  urls.py  views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/utils/: ranking.py
frontend/: .dockerignore  Dockerfile  (+9 more)
(+560 files in other folders)
