[project]
name = "backend"
version = "0.1.0"
description = "Backend for kulasisi"
authors = [
    {name = "Andrian Lloyd Maagma",email = "110181829+andrianllmm@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "django-stubs-ext (>=5.1.3,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-simple-history (>=3.8.0,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "drf-redesign (>=0.4.0,<0.5.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "symspellpy (>=6.7.8,<7.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false